--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.h2.console.enabled=true
-logging.level.org.springframework=ERROR
+#spring.h2.console.enabled=true
+#logging.level.org.springframework=ERROR
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.show-sql=true
-#spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
-#spring.datasource.username=notTheRootUser
-#spring.datasource.password=notTheRootPassword
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
+spring.datasource.username=notTheRootUser
+spring.datasource.password=notTheRootPassword
 
 
