--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 version: '3'
 services:
+  nginx:
+    build: ./web
+    ports: 
+    - "80:80"
+
   postgres:
     image: postgres
     ports:
@@ -7,8 +12,6 @@ services:
     environment:
       - POSTGRES_USER=notTheRootUser
       - POSTGRES_PASSWORD=notTheRootPassword
-#    volumes:
-#      - ./postgres-data:/var/lib/postgresql/data
 
   drinkspiration:
     build: .
