--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     environment:
       - POSTGRES_USER=notTheRootUser
       - POSTGRES_PASSWORD=notTheRootPassword
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
 
   drinkspiration:
     build: .
